# mopidy-mp3quran

./: .dockerignore  .env.example  Dockerfile  README.md  README.rst  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
docker/: entrypoint.sh  mopidy.conf  snapserver.conf
mopidy_mp3quran/: __init__.py  backend.py  client.py  ext.conf
src/mopidy_mp3quran/: __init__.py  backend.py  client.py  ext.conf
tests/: __init__.py  test_backend.py  test_client.py  test_extension.py
